<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_message">Something went wrong, please retry.</string>
    <string name="retry">Retry</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="find_your_favorite_movie">Find your favorite movie</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_account">Create account</string>
</resources>