...
                .fillMaxHeight()
                .background(colorResource(id = R.color.colorPrimary)),
            verticalArrangement = Arrangement.Center,
        ) {
            Image(
                painter = painterResource(R.mipmap.logo),
                contentDescription = "logo",
                modifier = Modifier
                    .width(250.dp)
                    .padding(20.dp)
                    .align(Alignment.CenterHorizontally)
            )
            InputTextBox(
...
